Sonar refactorings